# finitary-relational-calculus

./: .ghci  .gitignore  LICENSE  README.md  boolean-database.cabal  default.nix  finitary-algebra.cabal  finitary.cabal  flake.nix  fourmolu.yaml  hie.yaml  justfile  runtests.hs
app/: Main.hs  MainOld.hs
nix/modules/flake/: devshell.nix  haskell.nix  template.nix
src/: Algebra.hs  AlgebraSet.hs  Eval.hs  Finitary.hs  Main.hs  PrettyShow.hs  Query.hs  Tensor.hs  Term.hs  TermSet.hs  Tests.hs  main-old2.hs  main.hs  runtests.hs
src/Dict/: Algebra.hs  PrettyShow.hs  Term.hs  Tests.hs
src/Generic/: Algebra.hs  Eval.hs  Term.hs
src/Set/: Algebra.hs  Query.hs  Term.hs
test/: Tests.hs  runtests.hs
test/Generic/: TestAlgebra.hs  TestTerm.hs
test/Set/: TestAlgebra.hs  TestTerm.hs
