cabal-version:      2.4
name:               finitary-algebra
version:            0.1.0.0
license:            MIT
copyright:          2022 Thomas Holme Surlykke
maintainer:         srid@srid.ca
author:             Thomas Holme Surlykke
category:           Web
homepage:           https://srid.ca/finitary-algebra

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  -- ghc-options:
    -- -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -- -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -- -fprint-explicit-foralls -fprint-explicit-kinds -Werror

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
    GHC2024

  build-depends:
    , aeson
    , async
    , base          >=4   && <5
    , cond
    , lattices
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , vector-sized
    , with-utf8
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , QuickCheck


  hs-source-dirs:     src
  default-language:   GHC2024

test-suite test
    import: shared
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , finitary-algebra



executable finitary-algebra
  import:  shared
  main-is: Main.hs
  other-modules:
      Tests
      Finitary
