cabal-version:      3.0
name:               finitary-algebra
license:            MIT
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall -fno-omit-yields

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , containers
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , QuickCheck
      , ghc-typelits-natnormalise
      , vector-sized
      , random
    exposed-modules:
        Main
        Finitary
        Tensor
        Algebra
        Tests

test-suite finitary-algebra-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , QuickCheck
      , finitary-algebra


executable run
    import: common
    main-is: Main.hs
    build-depends:
        base
      , finitary-algebra
      , random
