cabal-version: 3.0
name: finitary
license: MIT
version: 1.0.0.0
build-type: Simple

library
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: GHC2024
  default-extensions: OverloadedStrings
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    QuickCheck,
    base,
    containers,
    ghc-typelits-natnormalise,
    relude,
    tasty,
    tasty-hunit,
    tasty-quickcheck,

  exposed-modules:
    Dict.Algebra
    Generic.Algebra
    Generic.Eval
    Generic.Term
    PrettyShow
    Set.Algebra
    Set.Query
    Set.Term

executable run
  hs-source-dirs: src
  main-is: main.hs
  ghc-options: -Wall
  default-language: GHC2024
  build-depends:
    finitary,
    ghc-typelits-natnormalise,

test-suite finitary-test
  hs-source-dirs: src
  main-is: runtests.hs
  ghc-options: -Wall
  default-language: GHC2024
  type: exitcode-stdio-1.0
  other-modules:
    Dict.Algebra
    Dict.Tests

  build-depends:
    QuickCheck,
    finitary,
    ghc-typelits-natnormalise,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
