cabal-version: 3.0
name: finitary
license: MIT
version: 1.0.0.0
build-type: Simple

common common
  hs-source-dirs: src
  ghc-options:
    -Wall
    -fplugin
    GHC.TypeLits.Normalise

  default-language: GHC2024
  default-extensions: OverloadedStrings
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    base,
    ghc-typelits-natnormalise,
    relude,

library
  import: common
  build-depends:
    QuickCheck,
    containers,
    lattices,
    tasty,
    tasty-hunit,
    tasty-quickcheck,

  exposed-modules:
    Dict.Algebra
    Dict.PrettyShow
    Generic.Algebra
    Generic.Eval
    Generic.Term
    PrettyShow
    Set.Algebra
    Set.Query
    Set.Term

executable run
  import: common
  main-is: main.hs
  build-depends:
    finitary

test-suite finitary-test
  import: common
  main-is: runtests.hs
  type: exitcode-stdio-1.0
  other-modules:
    Dict.Algebra
    Dict.Tests

  build-depends:
    QuickCheck,
    containers,
    finitary,
    lattices,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
