cabal-version: 3.0
name: finitary
license: MIT
version: 1.0.0.0
build-type: Simple

common common
  hs-source-dirs: src
  ghc-options:
    -Wall
    -fplugin
    GHC.TypeLits.Normalise

  default-language: GHC2024
  build-depends:
    QuickCheck,
    base,
    containers,
    ghc-typelits-natnormalise,
    tasty,
    tasty-hunit,
    tasty-quickcheck,

library
  import: common
  exposed-modules:
    Dict.Algebra
    Dict.Term
    Generic.Algebra
    Generic.Eval
    Generic.Term
    PrettyShow
    Set.Algebra
    Set.Query
    Set.Term

executable run
  import: common
  main-is: main.hs
  build-depends:
    finitary

test-suite finitary-test
  import: common
  ghc-options:
    -Wno-unused-matches
    -Wno-deprecations
    -Wno-unused-local-binds

  main-is: runtests.hs
  type: exitcode-stdio-1.0
  other-modules:
    Dict.Tests

  build-depends:
    finitary
